fix task counter overlaps create button in tracker page

--- a/static/css/tailwind.css
+++ b/static/css/tailwind.css
@@ -209,7 +209,7 @@ div.search_field > input[name="search"]:focus-visible ~ div.select{
   -webkit-user-select: none;
   -moz-user-select: none;
   position: absolute;
-  top: -5px;
+  top: 0px;
   right: 0;
   transform: translateY(-100%);
   /* @apply absolute transform -translate-y-full; */
@@ -217,8 +217,10 @@ div.search_field > input[name="search"]:focus-visible ~ div.select{
 .task{
   cursor: default;
   position: relative;
-  @apply rounded-full text-white text-lg text-center px-2 inline-block font-bold; /* px-4 py-2 text-xl */
+  border-radius: 50%;
+  @apply inline-block px-2 text-white text-center text-sm font-light  sm:text-lg sm:font-semibold sm:px-2.5 md:text-lg md:font-bold; /* px-4 py-2 text-xl */
 }
+
 .task-done{
   @apply bg-green-600;
 }
